# DuggerBootTools

./: README.md  pyproject.toml
components/chrome/chrome-api-bridge/: component.json  content.js
components/chrome/chrome-popup-bridge/: component.json  popup.js
src/duggerboot/: __init__.py  cli.py  dependency_checker.py  engine.py  exceptions.py  harvest.py  logging_config.py  scout.py
src/duggerboot/.mypy_cache/3.13/: __future__.data.json  __future__.meta.json  __main__.data.json  __main__.meta.json  _ast.data.json  _ast.meta.json  _asyncio.data.json  _asyncio.meta.json  _bisect.data.json  _bisect.meta.json  _blake2.data.json  _blake2.meta.json  _bz2.data.json  _bz2.meta.json  _codecs.data.json  _codecs.meta.json  _collections_abc.data.json  _collections_abc.meta.json  _compression.data.json  _compression.meta.json  _contextvars.data.json  _contextvars.meta.json  _ctypes.data.json  _ctypes.meta.json  _decimal.data.json  _decimal.meta.json  _frozen_importlib.data.json  _frozen_importlib.meta.json  _frozen_importlib_external.data.json  _frozen_importlib_external.meta.json  _hashlib.data.json  _hashlib.meta.json  _io.data.json  _io.meta.json  _locale.data.json  _locale.meta.json  _lsprof.data.json  _lsprof.meta.json  _operator.data.json  _operator.meta.json  (+174 more)
src/duggerboot/templates/: template_schema.yaml
src/duggerboot/templates/chrome-extension/: README.md.j2  dugger.yaml.j2  manifest.json.j2  template.yaml
src/duggerboot/templates/standard/: .gitignore.j2  README.md.j2  dugger.yaml.j2  pyproject.toml.j2  (+1 more)
test-chrome/: README.md  dugger.yaml  manifest.json
(+579 files in other folders)
